[gd_scene load_steps=11 format=3 uid="uid://ciqtf1jnwwain"]

[ext_resource type="Script" path="res://entities/ink/bubble/ink.gd" id="1_1kp2t"]
[ext_resource type="PackedScene" uid="uid://qjqoqs3gokgo" path="res://entities/ink/splat/splatter_node.tscn" id="2_o51bp"]
[ext_resource type="Texture2D" uid="uid://c1y5ayeme62o7" path="res://entities/ink/bubble/ink_hollow_64_one.png" id="3_f2r5t"]
[ext_resource type="Texture2D" uid="uid://h5krrqlsb64u" path="res://entities/ink/bubble/ink_hollow_64_two.png" id="4_uofug"]
[ext_resource type="AudioStream" uid="uid://y0tme6ipf4q4" path="res://entities/ink/bubble/gloop.wav" id="5_3flsh"]
[ext_resource type="Texture2D" uid="uid://b0barcaqhxomy" path="res://levels/small_ball.png" id="6_0u66b"]
[ext_resource type="AudioStream" uid="uid://bmx8rs4d2ems7" path="res://small_bloop.wav" id="7_m8i7s"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ucv5s"]

[sub_resource type="SpriteFrames" id="SpriteFrames_akmtp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_f2r5t")
}],
"loop": false,
"name": &"one",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_uofug")
}],
"loop": false,
"name": &"two",
"speed": 1.0
}]

[sub_resource type="Curve" id="Curve_6m0ec"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Ink" type="RigidBody2D" groups=["ink"]]
position = Vector2(-1, 0)
collision_layer = 2
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_ucv5s")
lock_rotation = true
script = ExtResource("1_1kp2t")
ink_splatter_scene = ExtResource("2_o51bp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 3
texture_filter = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_akmtp")
animation = &"two"

[node name="ExplosionDetection" type="Area2D" parent="."]
priority = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionDetection"]

[node name="HitDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetection"]
disabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_3flsh")

[node name="InkDetection" type="Area2D" parent="." groups=["ink"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InkDetection"]
disabled = true

[node name="TillExplode" type="Timer" parent="."]
wait_time = 0.04
one_shot = true
autostart = true

[node name="Fizzle" type="CPUParticles2D" parent="."]
z_index = 4
texture_filter = 1
emitting = false
amount = 6
lifetime = 1.5
one_shot = true
explosiveness = 1.0
texture = ExtResource("6_0u66b")
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2(2.08165e-12, -1)
spread = 30.0
gravity = Vector2(2.08165e-12, -400)
initial_velocity_min = 15.0
initial_velocity_max = 300.0
orbit_velocity_min = -0.5
orbit_velocity_max = 0.5
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_6m0ec")

[node name="FizzleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_m8i7s")
volume_db = -10.0
pitch_scale = 0.9

[connection signal="body_entered" from="HitDetection" to="." method="_on_hit_detection_body_entered"]
[connection signal="area_entered" from="InkDetection" to="." method="_on_ink_detection_area_entered"]
[connection signal="timeout" from="TillExplode" to="." method="_on_till_explode_timeout"]
